# haskell-mdns

./: .gitignore  LICENSE  Makefile  README.md  mdns.cabal  stack.yaml
app/: Main.hs
src/: HeaderParser.hs  Lib.hs
src/Network/: MDNS.hs
src/Network/MDNS/: Decode.hs  Decoder.hs  Encode.hs  Internal.hs  StateBinary.hs  Types.hs
test/: DecodeTest.hs  Main.hs
