name:                mdns
version:             0.1.0.0
-- synopsis:
description:         Haskell mDNS parser
homepage:            https://github.com/lholznagel/haskell-mdns#readme
license:             MIT
license-file:        LICENSE
author:              Lars Holznagel
maintainer:          lholznagel@outlook.com
copyright:           2017 lholznagel
category:            Network
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  ghc-options:         -Wall
  exposed-modules:     Lib
                     , Network.MDNS.Decoder
                     , Network.MDNS.Internal
                     , Network.MDNS.Types
  other-modules:       Network.MDNS.StateBinary
  build-depends:       base >= 4.7 && < 5
                     , attoparsec
                     , binary
                     , binary-strict
                     , bytestring
                     , conduit-extra
                     , containers
                     , mtl
                     , network
                     , network-multicast
  hs-source-dirs:      src
  default-language:    Haskell2010

executable mdns-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , mdns
  default-language:    Haskell2010

test-suite mdns-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , mdns
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/lholznagel/haskell-mdns
