name:                mdns
version:             0.1.0.0
-- synopsis:
description:         Haskell mDNS parser
homepage:            https://github.com/lholznagel/haskell-mdns#readme
license:             MIT
license-file:        LICENSE
author:              Lars Holznagel
maintainer:          lholznagel@outlook.com
copyright:           2017 lholznagel
category:            Network
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  ghc-options:         -Wall
  exposed-modules:     Network.MDNS.Decode
                     , Network.MDNS.Encode
                     , Network.MDNS.Internal
  build-depends:       base >= 4.7 && < 5
                     , attoparsec
                     , binary
                     , binary-strict
                     , bytestring
                     , containers
                     , iproute
                     , mtl
                     , network
                     , network-multicast
  hs-source-dirs:      src
  default-language:    Haskell2010

test-suite test
  type:                exitcode-stdio-1.0
  ghc-options:         -Wall
  hs-source-dirs:      test
  main-is:             Main.hs
  build-depends:       base
                     , binary
                     , bytestring
                     , bytestring-arbitrary
                     , iproute
                     , mdns
                     , tasty
                     , tasty-hunit
                     , tasty-quickcheck
  other-modules:       DecodeTest
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/lholznagel/haskell-mdns
